  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? tylerjereddy, richardjgowers, IAlibay, hmacdope, orbeckst, cbouy,
         lilyminium, daveminh, jbarnoud, yuxuanzhuang, VOD555, ianmkenney,
         calcraven，xiki-tempula, mieczyslaw

  * 2.0.0

Fixes
  * Avoid using deprecated array indexing in topology attributes
    (Issue #2990, PR #2991)
  * ParmedParser no longer guesses elements if they are not recognised, instead
    empty strings are assigned (Issue #2933)
  * Instead of using ATOM for both ATOM and HETATM, HETATM record type
    keyword is properly written out by PDB writer (Issue #1753, PR #2880).
  * Change referenced PDB standard version to 3.3 (Issue #2906).
  * Fixed reading in masses and charges from a hoomdxml file
    (Issue #2888, PR #2889)
  * Bond attribute is no longer set if PDB file contains no CONECT records
    (Issue #2832)
  * ResidueAttrs now have Atom as a target class by default; ICodes and
    Molnums now have default target_classes (#2803, PR #2805)
  * Selections on emtpy AtomGroups now return an empty AtomGroup instead of an
    error (Issue #2765)
  * TOPParser no longer guesses elements when missing atomic number records
    (Issues #2449, #2651)
  * Testsuite does not any more matplotlib.use('agg') (#2191)
  * In ChainReader, read_frame does not trigger change of iterating position.
    (Issue #2723, PR #2815)
  * TRZReader now checks `n_atoms` on reading. (Issue #2817, PR #2820)
  * TRZWriter now writes `n_atoms` to the file. (Issue #2817, PR #2820)
  * rdf.InterRDF_s density keyword documented and now gives correct results for
    density=True; the keyword was available since 0.19.0 but with incorrect
    semantics and not documented and did not produce correct results (Issue
    #2811, PR #2812)